# cdp-use

./: .dockerignore  .env  .env.example  .gitignore  CDP-USE_README.md  Dockerfile.chrome  Dockerfile.chromium  MCP_CHAT_UI_IMPLEMENTATION_GUIDE.md  MULTI_TAB_IMPLEMENTATION.md  QUICKSTART.md  README.md  README_DOCKER.md  README_GETTING_STARTED.md  README_MCP.md  WORKFLOW_AUTOMATION_SYSTEM.md  WORKFLOW_ENHANCED_ORCHESTRATOR_README.md  WorkflowFuture.md  debug_fastmcp_server.py  enhanced_conversational_orchestrator.py  fastmcp_browser_server.py  gemini_mcp_orchestrator.py  generalized_conversational_orchestrator.py  mcp_transport_examples.py  mlm_admin_dashboard_ui.py  pyproject.toml  simple_conversational_orchestrator.py  start_browser_mcp.bat  start_browser_mcp.py  test_automatic_visual_context.py  test_browser_automation.py  test_examples_server.py  test_orchestrator_fastmcp.py  workflow_demo.py  workflow_enhanced_orchestrator.py
LLMOrchestration/: .env  ConversationalOrchestrator_Strategy.md  Untitled-5.mmd  async_orchestrator.py  gemini_mcp_orchestrator.py  llm.py  orchestrator.py  orchestrator_web_ui.py  prompt_link.py
archives/: debug_mcp_server.py  demo_ai_agent.py  example_cdp_stdio.py  fix_file.py  get_chrome_ws_url.py  start_mcp_server.py
cdp_use/: __init__.py  browser_tools.py  mcp_server.py  mcp_server_fastmcp.py  session_manager.py
examples/: mcp_browser_control.py  multi_tab_demo.py
md/: ENHANCED_MCP_CLIENT_IMPLEMENTATION_PLAN.md  MULTIMODAL_IMAGE_SUPPORT_PLAN.md  VISUAL_INTERACTIVE_MAPPING_IMPLEMENTATION.md
tests/: simple.py  test_chrome_simple.py  (+18 more)
(+55 files in other folders)
